--- a/styles.css
+++ b/styles.css
@@ -42,7 +42,7 @@ section {
 }
 
 .image-container {
-  display: block;
+  display:flex;
   justify-content: space-between;
   align-items: center;
 }
@@ -53,10 +53,6 @@ section {
   border-radius: 8px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   transition: transform 0.3s ease;
-}
-.image1{
-  width: 70%;
-  border-radius:8px ;
 }
 
 .image:hover {
