--- a/styles.css
+++ b/styles.css
@@ -42,14 +42,14 @@ section {
 }
 
 .image-container {
-  display:flex;
+  display:block;
   justify-content: space-between;
   align-items: center;
 }
 
 .image{
   margin:5px;
-  width: 45%; /* Adjust the width as needed */
+  width: 50%; /* Adjust the width as needed */
   border-radius: 8px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   transition: transform 0.3s ease;
@@ -57,8 +57,8 @@ section {
 
 .image:hover {
   transform: scale(1.05);
+  box-shadow: 0 0 8px black;
 }
-
 footer {
   background-color: #333;
   color: #fff;
